Criação da rota de tarefas
